Prevent games dropdown from overflowing out of body

--- a/src/components/common/dropdown/dropdown.css
+++ b/src/components/common/dropdown/dropdown.css
@@ -7,17 +7,12 @@
 .expanded {
   z-index: 4000;
   position: absolute;
-  top: 100%;
 
   border-left: var(--border);
   border-right: var(--border);
   border-bottom: var(--border);
 
   box-shadow: var(--box-shadow);
-}
-
-.left {
-  left: 0;
 }
 
 .right {
