--- a/src/components/nav/gamesDropdown.css
+++ b/src/components/nav/gamesDropdown.css
@@ -1,13 +1,10 @@
 .section {
+  max-width: 100vw;
   background-color: white;
   padding-top: 1rem;
   padding-left: 0.75rem;
   padding-right: 0.75rem;
   color: #aaa;
-}
-
-.header {
-  white-space: nowrap;
 }
 
 .list {
